updating this file and storing into the repo

--- a/css/dhawkins-style.css
+++ b/css/dhawkins-style.css
@@ -1,6 +1,6 @@
-/** Styles for Dhawkins Advice **/                                          
+/** Styles for DeHawkins Advice **/                                          
 
-/**DHawkins */ 
+/**De Hawkins */ 
 
 body {
     background-color: lightgrey;
